# parsite

./: CHANGES  LICENSE  README.md  combinators.ml  combinators.mli  dune  dune-project  index.html  parsite.opam  types.ml
docs/: dune  index.mld
lib/: combinators.ml  combinators.mli  dune  types.ml  types.mli
lib/parsite/: combinators.mli  dune  types.ml  types.mli
parsite/: index.html
parsite/Parsite/: index.html
parsite/Parsite/Combinators/: index.html
parsite/Parsite/Types/: index.html
parsite/Parsite/Types/PResultM/: index.html
test/: dune  test_parsite.ml
